--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,16 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# ============ #
+# OS generated #
+# ============ #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
 
 # End of https://www.gitignore.io/api/unity
